--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>GolfCoach</title>
+  <title>Golf Coach</title>
+  <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
+  <%= stylesheet_link_tag    "bootstrap-responsive", :media => "all" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "bootstrap" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class='<%= controller.controller_name %>'>
-
-<%= yield %>
-
+	<div class="container-fluid">
+		<%= yield %>
+	</div>
 </body>
 </html>
