--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', coach_student_lesson_path(@coach, @student, @lesson) %> |
-<%= link_to 'Back', coach_path %>
+<%= link_to 'Back', coach_student_path(@coach, @student) %>
